# CraftyOS

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
OVMF/: .gitignore  README.md
bootloader/: Cargo.toml  x86_64-craftyos-uefi.json
bootloader/.cargo/: config.toml
bootloader/src/: gop.rs  kernel.rs  main.rs  psf1.rs
builder/: Cargo.toml  startup.nsh
builder/src/: main.rs
kernel/: Cargo.toml  linker.ld  x86_64-craftyos-kernel.json
kernel/.cargo/: config.toml
kernel/src/: alloc.rs  bitmap.rs  gdt.rs  gop.rs  interrupts.rs  io.rs  main copy.rs  main.rs  memory.rs
kernel/src/memory old/: mod.rs  page_frame_allocator.rs
kernel/src/memory old/paging/: mod.rs  table.rs
kernel/src/paging/: page_frame_allocator.rs  page_table_manager.rs
kernel/src/paging old/: mod.rs  page_frame_allocator.rs  page_map_indexer.rs  page_table_manager.rs
src/: allocator.rs  lib.rs  locked_mutex.rs  main.rs  qemu.rs  serial.rs  test.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/assembly/: registers.rs
src/disk/: ata.h  ata.rs  mod.rs
src/driver/: keyboard.rs  mod.rs  mouse.rs
src/executor/: mod.rs  spawner.rs  task.rs
src/gdt/: mod.rs  tss.rs
src/interrupts/: exceptions.rs  handlers.rs  hardware.rs  mod.rs
src/memory/: mod.rs
src/multitasking/: mod.rs  task.rs  taskmanager.rs
src/pci/: mod.rs
src/syscall/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  mouse.rs
src/vga_buffer/: colour.rs  mod.rs  writer.rs
tests/: basic_boot.rs  disk.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
