[package]
name = "crafty_os"
version = "0.1.0"
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = {version = "0.9", features= ["map_physical_memory"]}
volatile = "0.2"
lazy_static = {version = "1.4", features = ["spin_no_std"]}
spin = "0.9"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.5"
linked_list_allocator = "0.9.0"
ps2-mouse = "0.1"
crossbeam-queue = {version = "0.2", default-features = false, features = ["alloc"]}
conquer-once = {version = "0.3", default-features = false}
futures-util = {version = "0.3", default-features = false, features = ["alloc"]}

[package.metadata.bootimage]
run-command = [
    "qemu-system-x86_64", 
    "-drive", "format=raw,file={},if=ide",
    "-net", "nic,model=pcnet"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

[profile.dev]
# We need to set optimisation level to 3 so inline asm works :(
opt-level = 3