[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.11"
spin = "0.5.2"
x86_64 = "0.14.2"
bitflags = "1.3"
pic8259 = "0.10"
pc-keyboard = "*"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]